Notification: fix color
Color has to be set explicitly, must not inherit from container (if
container is disabled the notification should not look disabled)

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/notification/Notification.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/notification/Notification.less
@@ -14,6 +14,7 @@
   padding: 10px;
   margin: 10px 10px 0 10px;
   border: 1px solid transparent;
+  color: @text-color;
 
   &.ok {
     background-color: @notification-ok-background-color;
